Add auth begin
